# file-organizer

./: .gitignore  README.md  arrange_file.py  launch.bat  launch.sh  main.py  pyproject.toml  readme.md
config/: constants.py  file_types.py  settings.py
core/: __init__.py  analytics_engine.py  classifier.py  duplicate_cleaner.py  duplicate_detector.py  history_manager.py  mover.py  organizer.py  scanner.py
gui/: about_page.py  activity_panel.py  analytics.py  dashboard.py  history_page.py  history_window.py  icons.py  main_window.py  organize_page.py  organize_worker.py  preview_page.py  quarantine_page.py  settings_dialog.py  settings_page.py  sidebar.py  workers.py
gui/widgets/: action_card.py  chart_widget.py  folder_card.py  preview_table.py  stat_card.py  stats_widget.py
models/: preview_model.py  settings_model.py  stats_model.py
services/: __init__.py  event_bus.py  folder_watcher.py  preview_service.py  quarantine_service.py  undo_service.py
tests/: test_analytics_engine.py  test_classifier.py  test_duplicate_cleaner.py  test_mover.py  test_scanner.py  test_settings_theme.py
themes/: dark.qss  light.qss
